--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,14 @@ legend{
   flex-shrink:0;
 }
 
+.inline input[type="text"] {
+  width: auto;
+  flex: 1;
+  min-width:160px;
+
+}
+
+
 /* Legal (solo texto) */
 .legal p{
   margin:10px 0;
@@ -104,4 +112,9 @@ button{
   font-size:14px;
   color:#666;
   padding:16px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 24px;
 }
